Added auth token to API
